<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Top Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="256dp"
        android:src="@drawable/text_image"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Welcome Back -->

    <!-- Sign in to access account -->

    <TextView
        android:id="@+id/txt_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/txt_welcome_back"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/txt_access_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in access your account"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome_back"
        app:layout_constraintStart_toStartOf="@id/txt_welcome_back"
        app:layout_constraintEnd_toEndOf="@id/txt_welcome_back" />

    <!-- Email -->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:singleLine="true"
        android:hint="@string/et_email"
        android:drawableRight="@drawable/second_email_icon"
        android:paddingStart="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/txt_access_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Password -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/et_password"
        android:drawableRight="@drawable/second_hide_icon"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Remember Me -->
    <CheckBox
        android:id="@+id/cb_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_remember_me"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Forget Password -->
    <TextView
        android:id="@+id/txt_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_forget_password"
        android:textColor="#FF3951"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Next Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_shape"
        android:text="@string/btn_next"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/cb_remember_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- New Member -->

    <!-- Register -->
    <TextView
        android:id="@+id/txt_new_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_next" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"
        android:textColor="#FF3951"
        app:layout_constraintBottom_toBottomOf="@+id/txt_new_member"
        app:layout_constraintStart_toEndOf="@+id/txt_new_member"
        app:layout_constraintTop_toTopOf="@+id/txt_new_member" />

</androidx.constraintlayout.widget.ConstraintLayout>
