<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fontshape"
    android:backgroundTint="@color/white">

    <!-- Top Image -->
    <ImageView
        android:id="@+id/img_bike"
        android:layout_width="300dp"
        android:layout_height="178.37dp"
        android:src="@drawable/bike_image"
        android:layout_marginTop="215dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Main Heading -->
    <TextView
        android:id="@+id/txt_spot"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_world"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="@font/archivo_black"
        android:paddingStart="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/img_bike"
        app:layout_constraintStart_toStartOf="@id/img_bike" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/txt_desire"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_desire"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_spot"
        app:layout_constraintStart_toStartOf="@id/txt_spot" />

    <!-- Dots Indicators -->
    <ImageView
        android:id="@+id/img_red_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dot"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/img_light_red_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dot2"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/img_red_dot"
        app:layout_constraintBottom_toBottomOf="@id/img_red_dot" />

    <ImageView
        android:id="@+id/img_pink_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dot3"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/img_light_red_dot"
        app:layout_constraintBottom_toBottomOf="@id/img_light_red_dot" />

    <!-- Next Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/next_btn"
        android:contentDescription="@string/next_btn"
        android:layout_marginEnd="46dp"
        android:clickable="true"
        android:layout_marginBottom="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
